# HungchoiPass-Pico

./: .ina219.py.swp  .main.c.swp  CMakeLists.txt  HungchoiPass-Pico.fzz  INA219-Test.py  README.md  code.py  hcp_pico.py  ina219.py  main.c  main.py  package-lock.json
HungchoiPass/: settings.gradle
HungchoiPass/app/: build.gradle
HungchoiPass/app/src/androidTest/java/com/hcp/hungchoipass/: ExampleInstrumentedTest.kt
HungchoiPass/app/src/main/: AndroidManifest.xml
HungchoiPass/app/src/main/java/com/hcp/hungchoipass/: BluetoothManager.java  DeviceListActivity.java  Main2Activity.java  Main3Activity.java  MainActivity.java  MainActivity.kt
HungchoiPass/app/src/main/res/layout/: activity_main.xml  activity_main2.xml  activity_main3.xml  device_list.xml
HungchoiPass/app/src/main/res/values/: colors.xml  strings.xml  styles.xml  themes.xml
HungchoiPass/app/src/main/res/values-night/: themes.xml
HungchoiPass/app/src/main/res/values-v11/: styles.xml
HungchoiPass/app/src/main/res/values-zh/: strings.xml
HungchoiPass/app/src/test/java/com/hcp/hungchoipass/: ExampleUnitTest.kt
HungchoiPass/gradle/wrapper/: gradle-wrapper.properties
ina219/: ina219.c  ina219.h
